apps/personliness/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: personliness
  labels:
    app.kubernetes.io/name: personliness-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: personliness-redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: personliness-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: personliness
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: personliness-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
