apps/personliness/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personliness
  namespace: personliness
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: personliness
  ports:
    - name: http
      port: 80
      targetPort: 80
