apps/personliness/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personliness
  namespace: personliness
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: personliness.dcxxiv.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personliness
                port:
                  number: 80
  tls:
    - hosts:
        - personliness.dcxxiv.com
      secretName: personliness-tls
